# sha2

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: README.md
.github/workflows/: rust.yml
src/: lib.rs
